--- a/TestProject.Repository/TestProject.Repository.csproj
+++ b/TestProject.Repository/TestProject.Repository.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface\ISessionRepository.cs" />
     <Compile Include="Interface\IUserRepository.cs" />
-    <Compile Include="Repository.cs" />
-    <Compile Include="Interface\IRepository.cs" />
+    <Compile Include="BaseRepository.cs" />
+    <Compile Include="Interface\IBaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
