--- a/TestProject.Database/TestProject.Database.csproj
+++ b/TestProject.Database/TestProject.Database.csproj
@@ -47,6 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\AdminContext.cs" />
+    <Compile Include="Context\Interface\IAdminContext.cs" />
+    <Compile Include="Context\Interface\IContext.cs" />
+    <Compile Include="Migrations\201503050721447_InitialCreate.cs" />
+    <Compile Include="Migrations\201503050721447_InitialCreate.Designer.cs">
+      <DependentUpon>201503050721447_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +65,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201503050721447_InitialCreate.resx">
+      <DependentUpon>201503050721447_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
