--- a/TestProject.Service/TestProject.Service.csproj
+++ b/TestProject.Service/TestProject.Service.csproj
@@ -40,8 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interface\IBaseService.cs" />
+    <Compile Include="Interface\ISessionService.cs" />
     <Compile Include="Interface\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
