--- a/TestProject/packages.config
+++ b/TestProject/packages.config
@@ -5,5 +5,11 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="SimpleInjector" version="2.7.2" targetFramework="net45" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="2.7.2" targetFramework="net45" />
+  <package id="SimpleInjector.Integration.WebApi" version="2.7.2" targetFramework="net45" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="2.7.2" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
 </packages>
