--- a/TestProject.Utility/TestProject.Utility.csproj
+++ b/TestProject.Utility/TestProject.Utility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B208C872-CF2D-4518-AA06-32573692F7CD}</ProjectGuid>
+    <ProjectGuid>{81552E6C-77D4-4CD7-8E2C-D4D89C2430A4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestProject.Model</RootNamespace>
-    <AssemblyName>TestProject.Model</AssemblyName>
+    <RootNamespace>TestProject.Utility</RootNamespace>
+    <AssemblyName>TestProject.Utility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,16 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\BaseEntity.cs" />
-    <Compile Include="Domain\Session.cs" />
-    <Compile Include="Domain\User.cs" />
-    <Compile Include="Domain\UserRole.cs" />
-    <Compile Include="Enums\UserRoleEnum.cs" />
-    <Compile Include="Enums\UserStatusEnum.cs" />
+    <Compile Include="PasswordUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\Interfaces\IValid.cs" />
-    <Compile Include="View\User.cs" />
-    <Compile Include="View\UserLogin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
