--- a/TestProject.Repository/TestProject.Repository.csproj
+++ b/TestProject.Repository/TestProject.Repository.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Interface\IUserRepository.cs" />
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Interface\IBaseRepository.cs" />
+    <Compile Include="Interface\IVendorRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionRepository.cs" />
     <Compile Include="UserRepository.cs" />
+    <Compile Include="VendorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestProject.Database\TestProject.Database.csproj">
