--- a/TestProject.Service/TestProject.Service.csproj
+++ b/TestProject.Service/TestProject.Service.csproj
@@ -42,9 +42,11 @@
     <Compile Include="Interface\IBaseService.cs" />
     <Compile Include="Interface\ISessionService.cs" />
     <Compile Include="Interface\IUserService.cs" />
+    <Compile Include="Interface\IVendorService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionService.cs" />
     <Compile Include="UserService.cs" />
+    <Compile Include="VendorService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestProject.Database\TestProject.Database.csproj">
