--- a/TestProject.Model/TestProject.Model.csproj
+++ b/TestProject.Model/TestProject.Model.csproj
@@ -41,18 +41,20 @@
   <ItemGroup>
     <Compile Include="Domain\Bank.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
-    <Compile Include="Domain\CountryEnum.cs" />
+    <Compile Include="Domain\Country.cs" />
     <Compile Include="Domain\Session.cs" />
+    <Compile Include="Domain\State.cs" />
     <Compile Include="Domain\User.cs" />
     <Compile Include="Domain\UserRole.cs" />
     <Compile Include="Domain\Vendor.cs" />
-    <Compile Include="Enums\CountryEnum.cs" />
+    <Compile Include="Enums\CountryMap.cs" />
     <Compile Include="Enums\CurrencyEnum.cs" />
     <Compile Include="Enums\UserRoleEnum.cs" />
     <Compile Include="Enums\UserStatusEnum.cs" />
     <Compile Include="Enums\VendorStatusEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Bank.cs" />
+    <Compile Include="View\Country.cs" />
     <Compile Include="View\Interfaces\IValid.cs" />
     <Compile Include="View\User.cs" />
     <Compile Include="View\UserLogin.cs" />
